# ncit-workshop

./: .env.example  .gitignore  data_ingestion.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml
1-basic_agents/: 1.ipynb  2.ipynb  README.md
2_deep_research/: 1.ipynb  README.md  deep_research.py
3_rag/: 1_simple_rag.ipynb  2_agentic_rag.ipynb  data.db
4_rag/: 1_custom_mcp.ipynb  campus.db  server.py
config/: vault.hcl
core/: __init__.py  vault_loader.py
