[project]
name = "ncit-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvac>=2.4.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langsmith[openai-agents]>=0.6.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.6.4",
    "tavily-python>=0.7.17",
]
